[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-toolkit"
version = "0.1.0"
description = "Personal CLI toolkit"
authors = [
    { name = "Dean Morrison", email = "your-email@example.com" }
]
dependencies = []

[tool.setuptools]
packages = ["toolkit"]

[project.scripts]
toolkit = "toolkit.cli:main"

